Added Notes (dir in anchor)

--- a/Notes/FY-SEM2-IOT-BEEE /index.html
+++ b/Notes/FY-SEM2-IOT-BEEE /index.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <header>
-        <div class="nav-links">
-            <a href="../../" title="Home"><i data-lucide="home"></i></a>
-            <a href="../" title="Notes"><i data-lucide="arrow-left"></i></a>
-        </div>
         <h1>FY-SEM2-IOT-BEEE</h1>
         <button class="dark-mode-btn" id="darkModeBtn"><i data-lucide="moon"></i></button>
     </header>
+    <nav class="nav-section">
+        <div class="nav-buttons">
+            <a href="../../" title="Home"><i data-lucide="home"></i></a>
+            <a href="../" title="Notes"><i data-lucide="arrow-left"></i></a>
+        </div>
+    </nav>
     <div class="container">
         <div class="section">
             <h2>Available Notes</h2>
