--- a/Resources/index.html
+++ b/Resources/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <header>
-        <a href="../" class="back-home">← Back to Home</a>
         <h1>Resources</h1>
         <button class="dark-mode-btn" id="darkModeBtn"><i data-lucide="moon"></i></button>
     </header>
+    <nav class="nav-section">
+        <div class="nav-buttons">
+            <a href="../" class="back-home">← Back to Home</a>
+        </div>
+    </nav>
     <div class="container">
         <div class="search-container">
             <input type="text" id="search" placeholder="Search resources...">
@@ -19,6 +23,11 @@
         <div class="section">
             <h2>All Resources</h2>
              <div class="resources" id="resourceList">
+                 <!-- Sample item - copy and modify:
+                 <div class="resource-item" data-name="Subject Name">
+                     <a href="Subject-Folder/">Subject Display Name</a>
+                 </div>
+                 -->
                  <div class="resource-item" data-name="FY Sem2 Linux (IOT)">
                      <a href="FY-Sem2-IOTA-Linux/">FY-Sem2-Linux (IOT)</a>
                  </div>
