--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
         <div class="section">
             <h2>All Resources</h2>
             <div class="resources">
+                  <!-- Sample item - copy and modify:
+                  <div class="resource-item">
+                      <a href="Resources/Subject-Folder/">Subject Display Name</a>
+                  </div>
+                  -->
                   <div class="resource-item">
                       <a href="Resources/FY-Sem2-IOTA-Linux/">FY-Sem2-Linux (IOT)</a>
                   </div>
@@ -77,6 +82,11 @@
         <div class="section">
             <h2>All Notes</h2>
             <div class="resources">
+                  <!-- Sample item - copy and modify:
+                  <div class="resource-item">
+                      <a href="Notes/Subject-Folder/">Subject Display Name</a>
+                  </div>
+                  -->
                   <div class="resource-item">
                       <a href="Notes/FY-Sem2-IOTA-Linux/">FY-Sem2-Linux (IOT)</a>
                   </div>
@@ -94,6 +104,11 @@
         <div class="section">
             <h2>All Syllabus</h2>
             <div class="resources">
+                  <!-- Sample item - copy and modify:
+                  <div class="resource-item">
+                      <a href="Syllabus/Subject-Folder/">Subject Display Name</a>
+                  </div>
+                  -->
                   <div class="resource-item">
                       <a href="Syllabus/FY-Sem2-IOTA-Linux/">FY-Sem2-Linux (IOT)</a>
                   </div>
