--- a/Notes/FY-SEM2-PIC (IOT)/index.html
+++ b/Notes/FY-SEM2-PIC (IOT)/index.html
@@ -8,19 +8,62 @@
 </head>
 <body>
     <header>
-        <div class="nav-links">
-            <a href="../../" title="Home"><i data-lucide="home"></i></a>
-            <a href="../" title="Notes"><i data-lucide="arrow-left"></i></a>
-        </div>
         <h1>FY-SEM2-PIC (IOT)</h1>
         <button class="dark-mode-btn" id="darkModeBtn"><i data-lucide="moon"></i></button>
     </header>
+    <nav class="nav-section">
+        <div class="nav-buttons">
+            <a href="../../" title="Home"><i data-lucide="home"></i></a>
+            <a href="../" title="Notes"><i data-lucide="arrow-left"></i></a>
+        </div>
+    </nav>
     <div class="container">
         <div class="section">
             <h2>Available Notes</h2>
             <div class="coming-soon">
-                <p>🔧 Notes will be added soon.</p>
-                <p>Check back later for lecture notes and study materials.</p>
+		<li class="resource-item">
+                    <a href="1.jpg">
+                        <i data-lucide="file-image" class="file-icon"></i>
+                        <div class="file-info">
+                            <span class="file-name">1.jpg</span>
+                            <span class="file-desc">image</span>
+                        </div>
+                    </a>
+                    <span class="date">Updated on 17/12/25</span>
+                </li>
+<br>
+		<li class="resource-item">
+                    <a href="2.jpg">
+                        <i data-lucide="file-image" class="file-icon"></i>
+                        <div class="file-info">
+                            <span class="file-name">2.jpg</span>
+                            <span class="file-desc">image</span>
+                        </div>
+                    </a>
+                    <span class="date">Updated on 17/12/25</span>
+                </li>
+<br>
+		<li class="resource-item">
+                    <a href="3.jpg">
+                        <i data-lucide="file-image" class="file-icon"></i>
+                        <div class="file-info">
+                            <span class="file-name">3.jpg</span>
+                            <span class="file-desc">image</span>
+                        </div>
+                    </a>
+                    <span class="date">Updated on 17/12/25</span>
+                </li>
+<br>
+		<li class="resource-item">
+                    <a href="4.jpg">
+                        <i data-lucide="file-image" class="file-icon"></i>
+                        <div class="file-info">
+                            <span class="file-name">4.jpg</span>
+                            <span class="file-desc">image</span>
+                        </div>
+                    </a>
+                    <span class="date">Updated on 17/12/25</span>
+                </li>
             </div>
         </div>
     </div>
