--- a/Resources/FY-SEM2-PIC (IOT)/index.html
+++ b/Resources/FY-SEM2-PIC (IOT)/index.html
@@ -8,13 +8,21 @@
 </head>
 <body>
     <header>
-        <div class="nav-links">
-            <a href="../../" title="Home"><i data-lucide="home"></i></a>
-            <a href="../" title="Resources"><i data-lucide="arrow-left"></i></a>
-        </div>
         <h1>FY-SEM2-PIC (IOT)</h1>
         <button class="dark-mode-btn" id="darkModeBtn"><i data-lucide="moon"></i></button>
     </header>
+    <nav class="nav-section">
+        <div class="nav-buttons">
+            <a href="../../" title="Home"><i data-lucide="home"></i></a>
+            <a href="../" title="Resources"><i data-lucide="arrow-left"></i></a>
+        </div>
+    </nav>
+    <nav class="nav-section">
+        <div class="nav-buttons">
+            <a href="../../" title="Home"><i data-lucide="home"></i></a>
+            <a href="../" title="Resources"><i data-lucide="arrow-left"></i></a>
+        </div>
+    </nav>
     <div class="container">
         <div class="section">
             <h2>Available Resources</h2>
