--- a/Resources/FY-Sem2-IOTA-Linux/index.html
+++ b/Resources/FY-Sem2-IOTA-Linux/index.html
@@ -8,17 +8,31 @@
 </head>
 <body>
     <header>
-        <div class="nav-links">
-            <a href="../../" title="Home"><i data-lucide="home"></i></a>
-            <a href="../" title="Resources"><i data-lucide="arrow-left"></i></a>
-        </div>
         <h1>FY-Sem2-IOTA-Linux</h1>
         <button class="dark-mode-btn" id="darkModeBtn"><i data-lucide="moon"></i></button>
     </header>
+    <nav class="nav-section">
+        <div class="nav-buttons">
+            <a href="../../" title="Home"><i data-lucide="home"></i></a>
+            <a href="../" title="Resources"><i data-lucide="arrow-left"></i></a>
+        </div>
+    </nav>
     <div class="container">
         <div class="section">
             <h2>Available Resources</h2>
             <ul class="resource-list">
+                <!-- Sample item - copy and modify:
+                <li class="resource-item">
+                    <a href="file-name.pdf">
+                        <i data-lucide="file-text" class="file-icon"></i>
+                        <div class="file-info">
+                            <span class="file-name">File Name.pdf</span>
+                            <span class="file-desc">Description of the file</span>
+                        </div>
+                    </a>
+                    <span class="date">Updated on DD/MM/YY</span>
+                </li>
+                -->
                  <li class="resource-item">
                      <a href="Linux-installation-fyiot-sem2.pdf">
                          <i data-lucide="file-text" class="file-icon"></i>
