Added Notes (dir in anchor)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>CWITFY Resources</title>
     <link rel="icon" href="favicon.png">
     <link rel="stylesheet" href="Styles.css">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://cwitfy.peakso.in">
+    <meta property="og:title" content="CWITFY Resources">
+    <meta property="og:description" content="Your resource hub for FY-SEM2">
+    <meta property="og:image" content="https://cwitfy.peakso.in/favicon.png">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://cwitfy.peakso.in">
+    <meta name="twitter:title" content="CWITFY Resources">
+    <meta name="twitter:description" content="Your resource hub for FY-SEM2">
+    <meta name="twitter:image" content="https://cwitfy.peakso.in/favicon.png">
     <!-- Load Lucide once in the head -->
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
