--- a/Resources/FY-Sem2-IOTA-Linux/index.html
+++ b/Resources/FY-Sem2-IOTA-Linux/index.html
@@ -41,6 +41,17 @@
                              <span class="file-desc">Installation guide and practical materials</span>
                          </div>
                      </a>
+                     <br>
+                                     <li class="resource-item">
+                    <a href="Practical-1-prompt.txt">
+                        <i data-lucide="file-text" class="file-icon"></i>
+                        <div class="file-info">
+                            <span class="file-name">Prompt For Linux Practical 1</span>
+                            <span class="file-desc">Nothing Illegal i guess :)</span>
+                        </div>
+                    </a>
+                    <span class="date">Updated on DD/MM/YY</span>
+                </li>
                      <span class="date">Updated on 17/12/25</span>
                  </li>
             </ul>
