--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
         <div class="section">
             <h2>Recently Updated</h2>
             <ul class="recent-list" id="recentList">
+                 <li class="recent-item">
+                    <a href="Resources/FY-Sem2-IOTA-Linux/Practical-1-prompt.txt">Practical 1 Prompt - Linux Basics</a>
+                    <span class="date">Updated on 18/12/25-10:26pm IST</span>
+                </li>
                 <li class="recent-item">
                     <a href="Resources/FY-Sem2-IOTA-Linux/Linux-installation-fyiot-sem2.pdf">Linux Practical 1 - Installation - Images</a>
                     <span class="date">Updated on 17/12/25-6:23pm IST</span>
