--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2023 CWITFY. <a href="https://github.com/paris-29/CWITFY/">🐙 GitHub</a></p>
+        <p>&copy; 2023 CWITFY. <a href="https://github.com/paris-29/CWITFY/"><i data-lucide="github"></i> GitHub</a></p>
     </footer>
     <script>
         // Initialize Lucide icons once when the page loads
