--- a/Notes/index.html
+++ b/Notes/index.html
@@ -44,7 +44,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2025 CWITFY. <a href="https://github.com/paris-29/CWITFY/">🐙 GitHub</a></p>
+        <p>&copy; 2025 CWITFY. <a href="https://github.com/paris-29/CWITFY/"><i data-lucide="github"></i> GitHub</a></p>
     </footer>
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
     <script>
