--- a/Resources/FY-Sem2-IOTA-Linux/index.html
+++ b/Resources/FY-Sem2-IOTA-Linux/index.html
@@ -18,6 +18,9 @@
         </div>
     </nav>
     <div class="container">
+        <div class="search-container">
+            <input type="text" id="search" placeholder="Search resources...">
+        </div>
         <div class="section">
             <h2>Available Resources</h2>
             <ul class="resource-list">
@@ -56,10 +59,14 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2025 CWITFY. <a href="https://github.com/paris-29/CWITFY/">🐙 GitHub</a></p>
+        <p>&copy; 2025 CWITFY. <a href="https://github.com/paris-29/CWITFY/"><i data-lucide="github"></i> GitHub</a></p>
     </footer>
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
     <script>
+        const searchInput = document.getElementById('search');
+        const resourceList = document.querySelector('.resource-list');
+        const items = resourceList.getElementsByClassName('resource-item');
+
         const darkModeBtn = document.getElementById('darkModeBtn');
         const themeIcon = document.querySelector('#darkModeBtn i');
         const body = document.body;
@@ -76,6 +83,18 @@
             localStorage.setItem('theme', theme);
             themeIcon.setAttribute('data-lucide', theme === 'dark' ? 'sun' : 'moon');
             lucide.createIcons();
+        });
+
+        searchInput.addEventListener('input', function() {
+            const query = this.value.toLowerCase();
+            for (let item of items) {
+                const name = item.querySelector('a').textContent.toLowerCase();
+                if (name.includes(query)) {
+                    item.style.display = '';
+                } else {
+                    item.style.display = 'none';
+                }
+            }
         });
     </script>
 </body>
