--- a/Resources/FY-Sem2-IOTA-Linux/index.html
+++ b/Resources/FY-Sem2-IOTA-Linux/index.html
@@ -40,7 +40,7 @@
                      <a href="Linux-installation-fyiot-sem2.pdf">
                          <i data-lucide="file-text" class="file-icon"></i>
                          <div class="file-info">
-                             <span class="file-name">Linux-installation-fyiot-sem2.pdf</span>
+                             <span class="file-name">Practical 1 - Linux Installation - All images</span>
                              <span class="file-desc">Installation guide and practical materials</span>
                          </div>
                      </a>
@@ -55,6 +55,18 @@
                         </div>
                     </a>
                  </li>
+                 <br>
+
+                  <li class="resource-item">
+                      <a herf="https://ubuntu.com/tutorials/install-ubuntu-desktop#1-overview">
+                     <i data-lucide="file-text" class="file-icon"></i>
+                        <div class="file-info">
+                            <span class="file-name">Reference link For Linux Practical 1</span>
+                            <span class="file-desc">Sent by Mam :)</span>
+                        </div>
+                        </a>
+                </li>
+
             </ul>
         </div>
     </div>
