--- a/Resources/FY-Sem2-IOTA-Linux/index.html
+++ b/Resources/FY-Sem2-IOTA-Linux/index.html
@@ -58,7 +58,7 @@
                  <br>
 
                   <li class="resource-item">
-                      <a herf="https://ubuntu.com/tutorials/install-ubuntu-desktop#1-overview">
+                      <a href="https://ubuntu.com/tutorials/install-ubuntu-desktop#1-overview">
                      <i data-lucide="file-text" class="file-icon"></i>
                         <div class="file-info">
                             <span class="file-name">Reference link For Linux Practical 1</span>
