--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
         <div style="display: flex; align-items: center;">
             <img src="favicon.png" alt="CWITFY Logo" style="height: 50px; margin-right: 10px;">
-            <h1>CWITFY Resources</h1>
+            <h1>CWITFY</h1>
         </div>
        
     </header>
