--- a/Syllabus/FY-SEM2-IOT-A.Maths/index.html
+++ b/Syllabus/FY-SEM2-IOT-A.Maths/index.html
@@ -24,8 +24,15 @@
         <div class="section">
             <h2>Available Syllabus</h2>
             <div class="coming-soon">
-                <p>📚 Syllabus will be added soon.</p>
-                <p>Check back later for course syllabus and outlines.</p>
+                <li class="resource-item">
+                      <a href="MPECS - 23 Curriculum Amath DCPDIOT.docx">
+                     <i data-lucide="file-text" class="file-icon"></i>
+                        <div class="file-info">
+                            <span class="file-name">MPECS - 23 Curriculum Amath DCPDIOT</span>
+                            <span class="file-desc">Sent by Mam :)</span>
+                        </div>
+                        </a>
+                </li>
             </div>
         </div>
     </div>
