Added New Dir Architecture

--- a/Resources/FY-SEM2-PIC (IOT)/index.html
+++ b/Resources/FY-SEM2-PIC (IOT)/index.html
@@ -29,6 +29,15 @@
         </div>
         <div class="section">
             <h2>Available Resources</h2>
+            <div class="resource-item" data-name="Practicals">
+                <a href="PRACTICAL/">
+                    <i data-lucide="folder" class="file-icon"></i>
+                    <div class="file-info">
+                        <span class="file-name">Practicals</span>
+                        <span class="file-desc">Access practical materials and batch resources</span>
+                    </div>
+                </a>
+            </div>
             <div class="coming-soon">
                 <p>🔧 Resources will be added soon.</p>
                 <p>Check back later for lecture notes, assignments, and study materials.</p>
