--- a/Resources/FY-Sem2-IOTA-Linux/index.html
+++ b/Resources/FY-Sem2-IOTA-Linux/index.html
@@ -58,16 +58,26 @@
                  <br>
 
                   <li class="resource-item">
-                      <a href="https://ubuntu.com/tutorials/install-ubuntu-desktop#1-overview">
-                     <i data-lucide="file-text" class="file-icon"></i>
-                        <div class="file-info">
-                            <span class="file-name">Reference link For Linux Practical 1</span>
-                            <span class="file-desc">Sent by Mam :)</span>
-                        </div>
-                        </a>
-                </li>
+                       <a href="https://ubuntu.com/tutorials/install-ubuntu-desktop#1-overview">
+                      <i data-lucide="file-text" class="file-icon"></i>
+                         <div class="file-info">
+                             <span class="file-name">Reference link For Linux Practical 1</span>
+                             <span class="file-desc">Sent by Mam :)</span>
+                         </div>
+                         </a>
+                 </li>
+<br>
+                  <li class="resource-item">
+                      <a href="PRACTICAL/">
+                          <i data-lucide="folder" class="file-icon"></i>
+                          <div class="file-info">
+                              <span class="file-name">Practicals</span>
+                              <span class="file-desc">Access practical materials and batch resources</span>
+                          </div>
+                      </a>
+                  </li>
 
-            </ul>
+             </ul>
         </div>
     </div>
     <footer>
