--- a/Resources/FY-SEM2-WD/PRACTICAL/R batch/index.html
+++ b/Resources/FY-SEM2-WD/PRACTICAL/R batch/index.html
@@ -23,15 +23,8 @@
         </div>
         <div class="section">
             <h2>Available Resources</h2>
-                      <div class="resource-item" data-name="Practicals">
-                <a href="LINUX PRACTICAL 2.pdf">
-                    <i data-lucide="folder" class="file-icon"></i>
-                    <div class="file-info">
-                        <span class="file-name">LINUX PRACTICAL 2.pdf</span>
-                        <span class="file-desc">P batch Linux Practical 2</span>
-                    </div>
-                </a>
-            </div>
+         <p>📚 Resources will be added soon.</p>
+                <p>Check back later for practical materials and assignments.</p>
         </div>
     </div>
     <footer>
