--- a/Resources/FY-Sem2-IOTA-Linux/PRACTICAL/R batch/index.html
+++ b/Resources/FY-Sem2-IOTA-Linux/PRACTICAL/R batch/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>R Batch - FY-Sem2-IOTA-Linux Directory</title>
-    <link rel="stylesheet" href="../../../../Styles.css">
+    <title>FY-Sem2-IOTA-Linux Directory</title>
+    <link rel="stylesheet" href="../../Styles.css">
 </head>
 <body>
     <header>
-        <h1>R Batch - FY-Sem2-IOTA-Linux</h1>
+        <h1>FY-Sem2-IOTA-Linux</h1>
         <button class="dark-mode-btn" id="darkModeBtn"><i data-lucide="moon"></i></button>
     </header>
     <nav class="nav-section">
         <div class="nav-buttons">
-            <a href="../../../" title="Home"><i data-lucide="home"></i></a>
-            <a href="../../" title="Subject"><i data-lucide="arrow-left"></i></a>
+            <a href="../../" title="Home"><i data-lucide="home"></i></a>
+            <a href="../" title="Resources"><i data-lucide="arrow-left"></i></a>
         </div>
     </nav>
     <div class="container">
@@ -23,10 +23,62 @@
         </div>
         <div class="section">
             <h2>Available Resources</h2>
-            <div class="coming-soon">
-                <p>📚 Resources will be added soon.</p>
-                <p>Check back later for practical materials and assignments.</p>
-            </div>
+            <ul class="resource-list">
+                <!-- Sample item - copy and modify:
+                <li class="resource-item">
+                    <a href="file-name.pdf">
+                        <i data-lucide="file-text" class="file-icon"></i>
+                        <div class="file-info">
+                            <span class="file-name">File Name.pdf</span>
+                            <span class="file-desc">Description of the file</span>
+                        </div>
+                    </a>
+                    <span class="date">Updated on DD/MM/YY</span>
+                </li>
+                -->
+                 <li class="resource-item">
+                     <a href="Linux-installation-fyiot-sem2.pdf">
+                         <i data-lucide="file-text" class="file-icon"></i>
+                         <div class="file-info">
+                             <span class="file-name">Practical 1 - Linux Installation - All images</span>
+                             <span class="file-desc">Installation guide and practical materials</span>
+                         </div>
+                     </a>
+                 </li>
+<br>
+                     <li class="resource-item">
+                    <a href="Practical-1-prompt.txt">
+                        <i data-lucide="file-text" class="file-icon"></i>
+                        <div class="file-info">
+                            <span class="file-name">Prompt For Linux Practical 1</span>
+                            <span class="file-desc">Nothing Illegal i guess :)</span>
+                        </div>
+                    </a>
+                 </li>
+                 <br>
+
+                  <li class="resource-item">
+                       <a href="https://ubuntu.com/tutorials/install-ubuntu-desktop#1-overview">
+                      <i data-lucide="file-text" class="file-icon"></i>
+                         <div class="file-info">
+                             <span class="file-name">Reference link For Linux Practical 1</span>
+                             <span class="file-desc">Sent by Mam :)</span>
+                         </div>
+                         </a>
+                 </li>
+<br>
+                  <li class="resource-item">
+                      <a href="LINUX PRACTICAL 2.pdf">
+                          <i data-lucide="folder" class="file-icon"></i>
+                          <div class="file-info">
+                              <span class="file-name">LINUX PRACTICAL 2.pdf<span>
+                              <span class="file-desc">Practical 2 for R batch - Linux</span>
+                          </div>
+                      </a>
+                  </li>
+
+
+             </ul>
         </div>
     </div>
     <footer>
@@ -34,6 +86,10 @@
     </footer>
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
     <script>
+        const searchInput = document.getElementById('search');
+        const resourceList = document.querySelector('.resource-list');
+        const items = resourceList.getElementsByClassName('resource-item');
+
         const darkModeBtn = document.getElementById('darkModeBtn');
         const themeIcon = document.querySelector('#darkModeBtn i');
         const body = document.body;
@@ -52,10 +108,6 @@
             lucide.createIcons();
         });
 
-        const searchInput = document.getElementById('search');
-        const resourceList = document.querySelector('.resource-list');
-        const items = resourceList ? resourceList.getElementsByClassName('resource-item') : [];
-
         searchInput.addEventListener('input', function() {
             const query = this.value.toLowerCase();
             for (let item of items) {
@@ -69,4 +121,6 @@
         });
     </script>
 </body>
-</html>
+</html></content>
+</xai:function_call name="write">
+<parameter name="filePath">Resources/FY-SEM2-PIC (IOT)/index.html
