Happy new year! , i guess this year will be a mess for me as instead of enjoying , i am here writing this commit and just doin my Stuff, but i dont lose hope , just bcuz my start was bad dosent means it ends bad , lets just see

--- a/Resources/FY-SEM2-IOT-BEEE /PRACTICAL/Practical 2/index.html
+++ b/Resources/FY-SEM2-IOT-BEEE /PRACTICAL/Practical 2/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Q Batch - FY-SEM2-IOT-A.Maths Directory</title>
+    <title>Practical 2 - FY-SEM2-IOT-BEEE Directory</title>
     <link rel="stylesheet" href="../../../../Styles.css">
 </head>
 <body>
     <header>
-        <h1>Q Batch - FY-SEM2-IOT-A.Maths</h1>
+        <h1>Practical 2 - FY-SEM2-IOT-BEEE</h1>
         <button class="dark-mode-btn" id="darkModeBtn"><i data-lucide="moon"></i></button>
     </header>
     <nav class="nav-section">
@@ -24,7 +24,7 @@
         <div class="section">
             <h2>Available Resources</h2>
             <div class="coming-soon">
-                <p>📚 Resources will be added soon.</p>
+                <p>⚡ Resources will be added soon.</p>
                 <p>Check back later for practical materials and assignments.</p>
             </div>
         </div>
