--- a/Resources/FY-SEM2-PIC (IOT)/PRACTICAL/Practical 3/index.html
+++ b/Resources/FY-SEM2-PIC (IOT)/PRACTICAL/Practical 3/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P Batch - FY-SEM2-WD Directory</title>
+    <title>Practical 3 - FY-SEM2-PIC (IOT) Directory</title>
     <link rel="stylesheet" href="../../../../Styles.css">
 </head>
 <body>
     <header>
-        <h1>P Batch - FY-SEM2-WD</h1>
+        <h1>Practical 3 - FY-SEM2-PIC (IOT)</h1>
         <button class="dark-mode-btn" id="darkModeBtn"><i data-lucide="moon"></i></button>
     </header>
     <nav class="nav-section">
@@ -24,16 +24,8 @@
         <div class="section">
             <h2>Available Resources</h2>
             <div class="coming-soon">
-              <div class="resource-item" data-name="Practicals">
-                <a href="LINUX PRACTICAL 2.pdf">
-                    <i data-lucide="folder" class="file-icon"></i>
-                    <div class="file-info">
-                        <span class="file-name">LINUX PRACTICAL 2.pdf</span>
-                        <span class="file-desc">P batch Linux Practical 2</span>
-                    </div>
-                </a>
-            </div>
-               
+                <p>🔧 Resources will be added soon.</p>
+                <p>Check back later for practical materials and assignments.</p>
             </div>
         </div>
     </div>
