--- a/Resources/FY-Sem2-IOTA-Linux/PRACTICAL/Practical 2/index.html
+++ b/Resources/FY-Sem2-IOTA-Linux/PRACTICAL/Practical 2/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Q Batch - FY-SEM2-WD Directory</title>
+    <title>Practical 2 - FY-Sem2-IOTA-Linux Directory</title>
     <link rel="stylesheet" href="../../../../Styles.css">
 </head>
 <body>
     <header>
-        <h1>Q Batch - FY-SEM2-WD</h1>
+        <h1>Practical 2 - FY-Sem2-IOTA-Linux</h1>
         <button class="dark-mode-btn" id="darkModeBtn"><i data-lucide="moon"></i></button>
     </header>
     <nav class="nav-section">
