--- a/index.html
+++ b/index.html
@@ -33,6 +33,31 @@
         <div class="search-container">
             <input type="text" id="search" placeholder="Search resources...">
         </div>
+<div class="section">
+            <h2>Recently Updated</h2>
+            <ul class="recent-list" id="recentList">
+                 <li class="recent-item">
+                    <a href="Resources/FY-Sem2-IOTA-Linux/Practicals/Practical 1/Practical-1-prompt.txt">Practical 1 Prompt - Linux </a>
+                    <span class="date">Updated on 18/12/25-10:26pm IST</span>
+                </li>
+                <li class="recent-item">
+                    <a href="Resources/FY-Sem2-IOTA-Linux/Linux-installation-fyiot-sem2.pdf">Linux Practical 1 - Installation - Images</a>
+                    <span class="date">Updated on 17/12/25-6:23pm IST</span>
+                </li>
+		<li class="recent-item">
+                    <a href="Notes/FY-SEM2-PIC (IOT)/">Programming in C- Notes - Images</a>
+                    <span class="date">Updated on 17/12/25-10:12pm IST</span>
+                </li>
+		<li class="recent-item">
+                    <a href="Resources/FY-SEM2-PIC (IOT)/PRACTICAL/Practical 2/PIC practical 2.pdf">PIC - Practical 2 </a>
+                    <span class="date">Updated on 31/12/25-10:12pm IST</span>
+                </li>
+		<li class="recent-item">
+                    <a href="Resources/FY-SEM2-PIC (IOT)/PRACTICAL/Practical 1/PIC practical 1.pdf">PIC - Practical 1 </a>
+                    <span class="date">Updated on 31/12/25-10:12pm IST</span>
+                </li>
+            </ul>
+        </div>
         <div class="section">
             <h2>Categories</h2>
             <div class="resources">
@@ -56,23 +81,7 @@
                 </div>
             </div>
         </div>
-        <div class="section">
-            <h2>Recently Updated</h2>
-            <ul class="recent-list" id="recentList">
-                 <li class="recent-item">
-                    <a href="Resources/FY-Sem2-IOTA-Linux/Practical-1-prompt.txt">Practical 1 Prompt - Linux Basics</a>
-                    <span class="date">Updated on 18/12/25-10:26pm IST</span>
-                </li>
-                <li class="recent-item">
-                    <a href="Resources/FY-Sem2-IOTA-Linux/Linux-installation-fyiot-sem2.pdf">Linux Practical 1 - Installation - Images</a>
-                    <span class="date">Updated on 17/12/25-6:23pm IST</span>
-                </li>
-		<li class="recent-item">
-                    <a href="Notes/FY-SEM2-PIC (IOT)/">Programming in C- Notes - Images</a>
-                    <span class="date">Updated on 17/12/25-10:12pm IST</span>
-                </li>
-            </ul>
-        </div>
+        
         <div class="section">
             <h2>All Resources</h2>
             <div class="resources">
