--- a/Resources/FY-SEM2-PIC (IOT)/PRACTICAL/Practical 2/index.html
+++ b/Resources/FY-SEM2-PIC (IOT)/PRACTICAL/Practical 2/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P Batch - FY-SEM2-IOT-BEEE Directory</title>
+    <title>Practical 2 - FY-SEM2-PIC (IOT) Directory</title>
     <link rel="stylesheet" href="../../../../Styles.css">
 </head>
 <body>
     <header>
-        <h1>P Batch - FY-SEM2-IOT-BEEE</h1>
+        <h1>Practical 2 - FY-SEM2-PIC (IOT)</h1>
         <button class="dark-mode-btn" id="darkModeBtn"><i data-lucide="moon"></i></button>
     </header>
     <nav class="nav-section">
@@ -23,10 +23,9 @@
         </div>
         <div class="section">
             <h2>Available Resources</h2>
-            <div class="coming-soon">
-                <p>⚡ Resources will be added soon.</p>
-                <p>Check back later for practical materials and assignments.</p>
-            </div>
+           <div class="resource-item" data-name="FY Sem2 PIC">
+                     <a href="./PIC practical 2.pdf">PIC practical 2.pdf</a>
+                 </div>
         </div>
     </div>
     <footer>
