--- a/Resources/FY-SEM2-PIC (IOT)/PRACTICAL/index.html
+++ b/Resources/FY-SEM2-PIC (IOT)/PRACTICAL/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PRACTICAL - FY-SEM2-PIC (IOT) Directory</title>
+    <title>Practicals - FY-SEM2-PIC (IOT) Directory</title>
     <link rel="stylesheet" href="../../../Styles.css">
 </head>
 <body>
     <header>
-        <h1>PRACTICAL - FY-SEM2-PIC (IOT)</h1>
+        <h1>Practicals - FY-SEM2-PIC (IOT)</h1>
         <button class="dark-mode-btn" id="darkModeBtn"><i data-lucide="moon"></i></button>
     </header>
     <nav class="nav-section">
@@ -19,39 +19,39 @@
     </nav>
     <div class="container">
         <div class="search-container">
-            <input type="text" id="search" placeholder="Search batches...">
+            <input type="text" id="search" placeholder="Search practicals...">
         </div>
         <div class="section">
-            <h2>Available Batches</h2>
-             <div class="resource-item" data-name="P Batch">
-                 <a href="P batch/">
-                     <i data-lucide="folder" class="file-icon"></i>
-                     <div class="file-info">
-                         <span class="file-name">P Batch</span>
-                         <span class="file-desc">Practical resources for P Batch</span>
-                     </div>
-                 </a>
-             </div>
+            <h2>Available Practicals</h2>
+              <div class="resource-item" data-name="Practical 1">
+                  <a href="Practical 1/">
+                      <i data-lucide="folder" class="file-icon"></i>
+                      <div class="file-info">
+                          <span class="file-name">Practical 1</span>
+                          <span class="file-desc">Practical resources for Practical 1</span>
+                      </div>
+                  </a>
+              </div>
              <br>
-             <div class="resource-item" data-name="Q Batch">
-                 <a href="Q batch/">
-                     <i data-lucide="folder" class="file-icon"></i>
-                     <div class="file-info">
-                         <span class="file-name">Q Batch</span>
-                         <span class="file-desc">Practical resources for Q Batch</span>
-                     </div>
-                 </a>
-             </div>
+              <div class="resource-item" data-name="Practical 2">
+                  <a href="Practical 2/">
+                      <i data-lucide="folder" class="file-icon"></i>
+                      <div class="file-info">
+                          <span class="file-name">Practical 2</span>
+                          <span class="file-desc">Practical resources for Practical 2</span>
+                      </div>
+                  </a>
+              </div>
              <br>
-             <div class="resource-item" data-name="R Batch">
-                 <a href="R batch/">
-                     <i data-lucide="folder" class="file-icon"></i>
-                     <div class="file-info">
-                         <span class="file-name">R Batch</span>
-                         <span class="file-desc">Practical resources for R Batch</span>
-                     </div>
-                 </a>
-             </div>
+              <div class="resource-item" data-name="Practical 3">
+                  <a href="Practical 3/">
+                      <i data-lucide="folder" class="file-icon"></i>
+                      <div class="file-info">
+                          <span class="file-name">Practical 3</span>
+                          <span class="file-desc">Practical resources for Practical 3</span>
+                      </div>
+                  </a>
+              </div>
         </div>
     </div>
     <footer>
