--- a/Resources/FY-SEM2-WD/PRACTICAL/Practical 1/index.html
+++ b/Resources/FY-SEM2-WD/PRACTICAL/Practical 1/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Q Batch - FY-Sem2-IOTA-Linux Directory</title>
+    <title>Practical 1 - FY-SEM2-WD Directory</title>
     <link rel="stylesheet" href="../../../../Styles.css">
 </head>
 <body>
     <header>
-        <h1>Q Batch - FY-Sem2-IOTA-Linux</h1>
+        <h1>Practical 1 - FY-SEM2-WD</h1>
         <button class="dark-mode-btn" id="darkModeBtn"><i data-lucide="moon"></i></button>
     </header>
     <nav class="nav-section">
@@ -24,8 +24,16 @@
         <div class="section">
             <h2>Available Resources</h2>
             <div class="coming-soon">
-                <p>📚 Resources will be added soon.</p>
-                <p>Check back later for practical materials and assignments.</p>
+              <div class="resource-item" data-name="Practicals">
+                <a href="LINUX PRACTICAL 2.pdf">
+                    <i data-lucide="folder" class="file-icon"></i>
+                    <div class="file-info">
+                        <span class="file-name">LINUX PRACTICAL 2.pdf</span>
+                        <span class="file-desc">P batch Linux Practical 2</span>
+                    </div>
+                </a>
+            </div>
+               
             </div>
         </div>
     </div>
