--- a/Resources/FY-Sem2-IOTA-Linux/PRACTICAL/Practical 1/index.html
+++ b/Resources/FY-Sem2-IOTA-Linux/PRACTICAL/Practical 1/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>R Batch - FY-SEM2-WD Directory</title>
+    <title>Practical 1 - FY-Sem2-IOTA-Linux Directory</title>
     <link rel="stylesheet" href="../../../../Styles.css">
 </head>
 <body>
     <header>
-        <h1>R Batch - FY-SEM2-WD</h1>
+        <h1>Practical 1 - FY-Sem2-IOTA-Linux</h1>
         <button class="dark-mode-btn" id="darkModeBtn"><i data-lucide="moon"></i></button>
     </header>
     <nav class="nav-section">
@@ -23,8 +23,12 @@
         </div>
         <div class="section">
             <h2>Available Resources</h2>
-         <p>📚 Resources will be added soon.</p>
-                <p>Check back later for practical materials and assignments.</p>
+            <div class="resource-item" data-name="FY Sem2 Linux (IOT)">
+                     <a href="./Linux-installation-fyiot-sem2.pdf">Frist Practical Imgs</a>
+                 </div>
+            <div class="resource-item" data-name="FY Sem2 Linux (IOT)">
+                     <a href="./Practical-1-prompt.txt">Frist Practical Prompt</a>
+                 </div>
         </div>
     </div>
     <footer>
